<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imageEntry"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/row_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art_name"
            android:layout_marginStart="12dp"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/tvRowArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:layout_marginStart="12dp"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvRowYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art_year"
            android:layout_marginStart="12dp"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>